# gemm_microbench

./: .gitignore  Cargo.toml  Makefile  README.md  main.cpp
plot_gen/: data.json  plot.py
src/: lib.rs
